Fixed bug for an edge case where a plan without a space/new line that was long (e.g. aaaaaaaaaaa... ) would not overflow properly and move to next line

--- a/src/App.css
+++ b/src/App.css
@@ -202,6 +202,7 @@ li {
   overflow-x: hidden;
   white-space: normal;
   scrollbar-width: thin;
+  word-wrap: break-word;
 
   cursor: pointer;
   transition: 0.5s;
@@ -364,7 +365,6 @@ textarea {
   top: 16%;
   left: 1%;
 }
-
 
 .todayText {
   display: flex;
